--- a/src/django_admin_keyshortcuts/templates/admin/base.html
+++ b/src/django_admin_keyshortcuts/templates/admin/base.html
@@ -5,6 +5,7 @@
   {{ block.super }}
   {% block extrahead_shortcuts %}
     <link rel="stylesheet" href="{% static "admin/css/shortcuts.css" %}">
+    <script src="{% static "admin/js/vendor/hotkey/hotkey.js" %}"></script>
     <script src="{% static "admin/js/shortcuts.js" %}" defer></script>
   {% endblock %}
 {% endblock %}
