--- a/src/django_admin_keyshortcuts/templates/admin/delete_confirmation_shortcuts.html
+++ b/src/django_admin_keyshortcuts/templates/admin/delete_confirmation_shortcuts.html
@@ -1,16 +1,19 @@
 {% extends "admin/shortcuts.html" %}
-{% load i18n %}
+{% load i18n shortcuts %}
+
+{% get_shortcuts as shortcuts %}
 
 {% block extra_shortcuts %}
 {{ block.super }}
 <section>
-  <h3>{% translate "Delete Confirmation" %}</h3>
-  <dl>
-    <dt class="shortcut-description">{% translate "Confirm deletion" %}</dt>
-    <dd class="shortcut-keys"><kbd class="alt">Alt</kbd> + <kbd>y</kbd></dd>
-
-    <dt class="shortcut-description">{% translate "Cancel deletion" %}</dt>
-    <dd class="shortcut-keys"><kbd class="alt">Alt</kbd> + <kbd>n</kbd></dd>
-  </dl>
+  <section>
+    <h3>{% translate "Delete Confirmation" %}</h3>
+    <dl>
+      {% for shortcut in shortcuts.delete_confirmation.values %}
+        <dt class="shortcut-description">{{ shortcut.0 }}</dt>
+        <dd class="shortcut-keys"><kbd>{{ shortcut.1 }}</kbd></dd>
+      {% endfor %}
+    </dl>
+  </section>
 </section>
 {% endblock %}
