--- a/src/django_admin_keyshortcuts/templates/admin/change_list.html
+++ b/src/django_admin_keyshortcuts/templates/admin/change_list.html
@@ -3,7 +3,7 @@
 
 {% block extrahead %}
   {{ block.super }}
-  <script src="{% static "admin/js/shortcuts_changelist.js" %}"></script>
+  <script type="module" src="{% static "admin/js/shortcuts_changelist.js" %}"></script>
 {% endblock %}
 
 {% block shortcuts %}
