--- a/src/django_admin_keyshortcuts/templates/admin/change_form_shortcuts.html
+++ b/src/django_admin_keyshortcuts/templates/admin/change_form_shortcuts.html
@@ -1,24 +1,19 @@
 {% extends "admin/shortcuts.html" %}
-{% load i18n %}
+{% load i18n shortcuts %}
+
+{% get_shortcuts as shortcuts %}
 
 {% block extra_shortcuts %}
-  {{ block.super }}
+{{ block.super }}
+<section>
   <section>
-    <h3>{% if change %}{% translate "Change Form" %}{% else %}{% translate "Add Form" %}{% endif %}</h3>
+    <h3>{% translate "Change Form" %}</h3>
     <dl>
-      <dt class="shortcut-description">{% translate "Save and go to change list" %}</dt>
-      <dd class="shortcut-keys"><kbd class="alt">Alt</kbd> + <kbd>s</kbd></dd>
-
-      <dt class="shortcut-description">{% translate "Save and add another" %}</dt>
-      <dd class="shortcut-keys"><kbd class="alt">Alt</kbd> + <kbd>a</kbd></dd>
-
-      <dt class="shortcut-description">{% translate "Save and continue editing" %}</dt>
-      <dd class="shortcut-keys"><kbd class="alt">Alt</kbd> + <kbd>c</kbd></dd>
-
-      {% if change %}
-        <dt class="shortcut-description">{% translate "Delete" %}</dt>
-        <dd class="shortcut-keys"><kbd class="alt">Alt</kbd> + <kbd>d</kbd></dd>
-      {% endif %}
+      {% for shortcut in shortcuts.changeform.values %}
+        <dt class="shortcut-description">{{ shortcut.0 }}</dt>
+        <dd class="shortcut-keys">{% shortcut_format_kbd shortcut.1 %}</dd>
+      {% endfor %}
     </dl>
   </section>
+</section>
 {% endblock %}
