--- a/src/django_admin_keyshortcuts/templates/admin/change_list_shortcuts.html
+++ b/src/django_admin_keyshortcuts/templates/admin/change_list_shortcuts.html
@@ -1,22 +1,27 @@
 {% extends "admin/shortcuts.html" %}
-{% load i18n %}
+{% load i18n shortcuts %}
+
+{% get_shortcuts as shortcuts %}
+
+{% block shortcut_buttons %}
+  {{ block.super }}
+  <button id="keyshortcut-prev-btn" data-hotkey="{{ shortcuts.changelist.focus_prev_row.1 }}" hidden></button>
+  <button id="keyshortcut-next-btn" data-hotkey="{{ shortcuts.changelist.focus_next_row.1 }}" hidden></button>
+  <button id="keyshortcut-select-btn" data-hotkey="{{ shortcuts.changelist.toggle_row_selection.1 }}" hidden></button>
+  <button id="keyshortcut-select-actions-btn" data-hotkey="{{ shortcuts.changelist.focus_actions_dropdown.1 }}" hidden></button>
+{% endblock %}
 
 {% block extra_shortcuts %}
 {{ block.super }}
 <section>
-  <h3>{% translate "Change List" %}</h3>
-  <dl>
-    <dt class="shortcut-description">{% translate "Focus next row" %}</dt>
-    <dd class="shortcut-keys"><kbd>j</kbd></dd>
-
-    <dt class="shortcut-description">{% translate "Focus previous row" %}</dt>
-    <dd class="shortcut-keys"><kbd>k</kbd></dd>
-
-    <dt class="shortcut-description">{% translate "Toggle row selection" %}</dt>
-    <dd class="shortcut-keys"><kbd>x</kbd></dd>
-
-    <dt class="shortcut-description">{% translate "Focus actions dropdown" %}</dt>
-    <dd class="shortcut-keys"><kbd>a</kbd></dd>
-  </dl>
+  <section>
+    <h3>{% translate "Change List" %}</h3>
+    <dl>
+      {% for shortcut in shortcuts.changelist.values %}
+        <dt class="shortcut-description">{{ shortcut.0 }}</dt>
+        <dd class="shortcut-keys">{% shortcut_format_kbd shortcut.1 %}</dd>
+      {% endfor %}
+    </dl>
+  </section>
 </section>
 {% endblock %}
