--- a/src/django_admin_keyshortcuts/templates/admin/shortcuts.html
+++ b/src/django_admin_keyshortcuts/templates/admin/shortcuts.html
@@ -17,14 +17,16 @@
   </div>
   <label for="toggle-shortcuts">{% translate "Use keyboard shortcuts" %}</label>
   <input type="checkbox" id="toggle-shortcuts">
-  <section>
-    <h3>{% translate "Global" %}</h3>
-    <dl>
-      {% for shortcut in shortcuts.global.values %}
-        <dt class="shortcut-description">{{ shortcut.0 }}</dt>
-        <dd class="shortcut-keys">{% shortcut_format_kbd shortcut.1 %}</dd>
-      {% endfor %}
-    </dl>
-  </section>
+  {% block global_shortcuts %}
+    <section>
+      <h3>{% translate "Global" %}</h3>
+      <dl>
+        {% for shortcut in shortcuts.global.values %}
+          <dt class="shortcut-description">{{ shortcut.0 }}</dt>
+          <dd class="shortcut-keys">{% shortcut_format_kbd shortcut.1 %}</dd>
+        {% endfor %}
+      </dl>
+    </section>
+  {% endblock %}
   {% block extra_shortcuts %}{% endblock %}
 </dialog>
